--- a/index.html
+++ b/index.html
@@ -6,53 +6,27 @@
   <title>Memory</title>
   </head>
 <body>
-
-  <!-- <div class="Heading">
-    <div class="Cell">
-      <p>Heading 1</p>
-    </div>
-
-  <div class="Cell">
-    <p>Heading 2</p>
-  </div>
-
-  <div class="Cell">
-    <p>Heading 3</p>
-  </div>
-
-  <div class="Cell">
-    <p>Heading 4</p>
-    </div>
-  </div> -->
-
-<!-- heading ends here -->
-
-
-<!-- this is a rown -->
+<!-- NHO: Make sure to remove unused / commented out code! -->
   <div class="row">
     <div class="card" id="one">
       <figure class="front">
         <img class="img" src="http://usercontent2.hubimg.com/6089769_f260.jpg">
       </figure>
-      <!-- <figure class="back">2</figure> -->
     </div>
     <div class="card" id="two">
       <figure class="front">
         <img class="img" src="http://usercontent2.hubimg.com/6089769_f260.jpg">
       </figure>
-      <!-- <figure class="back">2</figure> -->
     </div>
     <div class="card" id="three">
       <figure class="front">
         <img class="img" src="http://usercontent2.hubimg.com/6089769_f260.jpg">
       </figure>
-      <!-- <figure class="back">2</figure> -->
     </div>
     <div class="card" id="four">
       <figure class="front">
         <img class="img" src="http://usercontent2.hubimg.com/6089769_f260.jpg">
       </figure>
-      <!-- <figure class="back">2</figure> -->
     </div>
   </div>
   <div class="row">
@@ -60,99 +34,25 @@
       <figure class="front">
         <img class="img" src="http://usercontent2.hubimg.com/6089769_f260.jpg">
       </figure>
-      <!-- <figure class="back">2</figure> -->
     </div>
     <div class="card" id="six">
       <figure class="front">
         <img class="img" src="http://usercontent2.hubimg.com/6089769_f260.jpg">
       </figure>
-      <!-- <figure class="back">2</figure> -->
     </div>
     <div class="card" id="seven">
       <figure class="front">
         <img class="img" src="http://usercontent2.hubimg.com/6089769_f260.jpg">
       </figure>
-      <!-- <figure class="back">2</figure> -->
     </div>
     <div class="card" id="eight">
       <figure class="front">
         <img class="img" src="http://usercontent2.hubimg.com/6089769_f260.jpg">
       </figure>
-      <!-- <figure class="back">2</figure> -->
     </div>
   </div>
-
-
-
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-<!-- <div class="viewport">
-<div class="flip-card">
-<div class="card-front">Front!</div>
-<div class="card-back">Back!</div>
-</div>
-
-<div class="flip-card">
-<div class="card-front">Front!</div>
-<div class="card-back">Back!</div>
-</div>
-
-<div class="flip-card">
-<div class="card-front">Front!</div>
-<div class="card-back">Back!</div>
-</div>
-
-<div class="flip-card">
-<div class="card-front">Front!</div>
-<div class="card-back">Back!</div>
-</div>
-
-<div class="flip-card">
-<div class="card-front">Front!</div>
-<div class="card-back">Back!</div>
-</div>
-
-<div class="flip-card">
-<div class="card-front">Front!</div>
-<div class="card-back">Back!</div>
-</div>
-
-<div class="flip-card">
-<div class="card-front">Front!</div>
-<div class="card-back">Back!</div>
-</div>
-
-<div class="flip-card">
-<div class="card-front">Front!</div>
-<div class="card-back">Back!</div>
-</div>
-
-<div class="flip-card">
-<div class="card-front">Front!</div>
-<div class="card-back">Back!</div>
-</div>
-
-<div class="flip-card">
-<div class="card-front">Front!</div>
-<div class="card-back">Back!</div>
-</div>
-
-<div class="flip-card">
-<div class="card-front">Front!</div>
-<div class="card-back">Back!</div>
-</div>
-
-<div class="flip-card">
-<div class="card-front">Front!</div>
-<div class="card-back">Back!</div>
-</div>
-</div> -->
+<!-- NHO: Make sure to remove commented out code! -->
